<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart enough?</string>
    <string name="action_settings">Settings</string>
    <string name="menu_StartButton">Започни игра</string>
    <string name="menu_ScoreButton">Класация</string>
    <string name="highscore_DeleteButton">изчисти</string>
    <string name="local_highscore_hint">Няма запазени резултати!</string>
    <string name="endgame_SaveButton">Запази</string>
    <string name="endgame_RecordName">Въведи име</string>
    <string name="filemanager_QuestionFile">file.txt</string>
    <string name="filemanager_ScoresFile">scores.txt</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="homebutton_description">home button</string>
    <string name="menu_OnlineButton">beta</string>
    <string name="audience_toast">Звездите ти казаха</string>
    <string name="fifty_joker_text">50/50</string>
    <string name="change_joker_text">skip</string>
    <string name="audience_joker_text">✦★✦</string>
    <string name="endgame_home_button">изход</string>
    <string name="endgame_save_button">запази</string>
    <string name="menu_sendquestion_button">Изпрати въпрос</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="local_highscore_string">Локална класация</string>
    <string name="global_highscore_string">Глобална класация</string>
    <string name="global_highscore_hint">Няма връзка с интернет!</string>
    <string name="questionsubmit_question_textview">Въведи въпрос:</string>
    <string name="questionsubmit_wronganswer_textview">Грешен отговор</string>
    <string name="questionsubmit_rightanswer_textview">Верен отговор</string>
    <string name="questionsubmit_difficulty_textview">Избери трудност</string>
    <string name="questionsubmit_radiobutton_easy">Лесен</string>
    <string name="questionsubmit_radiobutton_medium">Нормален</string>
    <string name="questionsubmit_radiobutton_hard">Труден</string>
    <string name="questionsubmit_sendbutton_text">Изпрати</string>
    <string name="questionsubmit_fielderror_toast">Трябва да се попълнят всички полета</string>
    <string name="questionsubmit_senderror_toast">Неизправна връзка с интернет</string>
    <string name="questionsubmit_success_toast">Въпросът е изпратен</string>
    <string name="questionsubmit_sending_progressdialog_message">Изпращане</string>
    <string name="endgame_toast_on_empty_name">Въведи име</string>
    <string name="endgame_progressdialog_saving_message">Запазване на резултата..</string>
    <string name="endgame_toast_on_saving_success">Запазено</string>
    <string name="highscoreslider_progressdialog_loading_message">Зареждане</string>
    <string name="filemanager_error_tag">Login activity</string>

</resources>
