<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/questionsubmit_textview_bottommargin"
        android:text="@string/questionsubmit_question_textview" />

    <EditText
        android:id="@+id/questionsubmitQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/questionsubmit_textview_bottommargin"
        android:layout_marginTop="@dimen/questionsubmit_textview_largemargin"
        android:text="@string/questionsubmit_rightanswer_textview" />

    <EditText
        android:id="@+id/questionsubmitanswer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/questionsubmit_textview_bottommargin"
        android:layout_marginTop="@dimen/questionsubmit_textview_largemargin"
        android:text="@string/questionsubmit_wronganswer_textview" />

    <EditText
        android:id="@+id/questionsubmitanswer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/questionsubmit_textview_bottommargin"
        android:layout_marginTop="@dimen/questionsubmit_textview_largemargin"
        android:text="@string/questionsubmit_wronganswer_textview" />

    <EditText
        android:id="@+id/questionsubmitanswer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/questionsubmit_textview_bottommargin"
        android:layout_marginTop="@dimen/questionsubmit_textview_largemargin"
        android:text="@string/questionsubmit_wronganswer_textview" />

    <EditText
        android:id="@+id/questionsubmitanswer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/questionsubmit_textview_bottommargin"
        android:layout_marginTop="@dimen/questionsubmit_textview_largemargin"
        android:text="@string/questionsubmit_difficulty_textview" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/questionsubmitRadioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radioClicked"
            android:text="@string/questionsubmit_radiobutton_easy" />

        <RadioButton
            android:id="@+id/questionsubmitRadioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/questionsubmit_radiobuttons_space"
            android:layout_marginRight="@dimen/questionsubmit_radiobuttons_space"
            android:onClick="radioClicked"
            android:text="@string/questionsubmit_radiobutton_medium" />

        <RadioButton
            android:id="@+id/questionsubmitRadioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radioClicked"
            android:text="@string/questionsubmit_radiobutton_hard" />
    </RadioGroup>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/menu_buttons"
        android:onClick="sendQuestion"
        android:text="@string/questionsubmit_sendbutton_text" />

</LinearLayout>