<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal">

    <Button
        android:id="@+id/fragmentFiftyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/joker_buttons"
        android:text="@string/fifty_joker_text"
        android:textSize="15sp" />

    <Button
        android:id="@+id/fragmentChangeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/joker_buttons"
        android:text="@string/change_joker_text"
        android:textSize="15sp" />

    <Button
        android:id="@+id/fragmentAudienceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/joker_buttons"
        android:text="@string/audience_joker_text"
        android:textSize="15sp" />

</LinearLayout>