<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:background="@color/contrastToBackgroundColor"
        android:gravity="end"
        android:padding="@dimen/highscore_textview_padding"
        android:text="@string/local_highscore_string"
        android:textColor="@color/audienceToastTextColor" />

    <TextView
        android:id="@+id/highscoreScoreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/local_highscore_hint"
        android:lineSpacingMultiplier="1.2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/highscoreDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@drawable/highscore_reset_button"
        android:onClick="onClick"
        android:text="@string/highscore_DeleteButton"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

</RelativeLayout>